--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Bonjour</title>
+    <style>
+        body {
+            font-size: 3em;
+            color: blue;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
    Bonjour tout le monde 
